# wallet_api

./: LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: eeaaf6936e38_create_wallet_table.py
app/: main.py
app/api/routes/: wallets.py
app/core/: config.py
app/db/: database.py
app/models/: __init__.py  wallet.py
app/schemas/: wallet.py
tests/: test_wallet.py
