[project]
name = "payment-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Kirill-5",email = "solovyanovkd@gmai.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.138.1,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v --tb=short"